[gd_scene load_steps=21 format=2]

[ext_resource path="res://pedestrians/died_sprite.png" type="Texture" id=1]
[ext_resource path="res://pedestrians.gd" type="Script" id=2]
[ext_resource path="res://pedestrians/blue_man_pos_1.png" type="Texture" id=3]
[ext_resource path="res://pedestrians/blue_man_pos_2.png" type="Texture" id=4]
[ext_resource path="res://pedestrians/blue_man_pos_3 2.png" type="Texture" id=5]
[ext_resource path="res://pedestrians/blonde_girl_pos_2.png" type="Texture" id=6]
[ext_resource path="res://pedestrians/blonde_girl_pos_3.png" type="Texture" id=7]
[ext_resource path="res://pedestrians/blonde_girl_pos_1.png" type="Texture" id=8]
[ext_resource path="res://pedestrians/blue_man_pos_1.png" type="Texture" id=9]
[ext_resource path="res://pedestrians/blue_man_pos_2.png" type="Texture" id=10]
[ext_resource path="res://pedestrians/carrier_man_pos_3.png" type="Texture" id=11]
[ext_resource path="res://pedestrians/carrier_man_pos_2.png" type="Texture" id=12]
[ext_resource path="res://pedestrians/carrier_man_pos_1.png" type="Texture" id=13]
[ext_resource path="res://pedestrians/carrier_man_pos_1.png" type="Texture" id=14]
[ext_resource path="res://pedestrians/phone_man_pos_3.png" type="Texture" id=15]
[ext_resource path="res://pedestrians/phone_man_pos_1.png" type="Texture" id=16]
[ext_resource path="res://pedestrians/phone_man_pos_2.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "blonde_girl",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "carrier_man",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "blue_man_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "blue_man",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "phone_man",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 67.5, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 52.5, 30 )

[node name="pedestrians" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_mask = 0
script = ExtResource( 2 )

[node name="people" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "phone_man"

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 0.999999, 0.999999 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.5, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 0 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="dead" type="Sprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="fade_tween" type="Tween" parent="dead"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
